# openkiln

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  WORKFLOWS.md  install.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md
openkiln/: __init__.py  cli.py  config.py  db.py
openkiln/commands/: __init__.py  company.py  contact.py  init.py  record.py  skill.py  status.py  update.py  workflow.py
openkiln/core/: __init__.py  sink.py  source.py  transform.py  waterfall.py  workflow.py
openkiln/providers/: __init__.py  orbisearch.py  smartlead.py
openkiln/schema/: 001_initial.sql
openkiln/schema/core/: 001_initial.sql
openkiln/skills/: __init__.py
openkiln/skills/cleanco/: SKILL.md  __init__.py  api.py  cli.py  queries.py  skill.toml  workflow.py
openkiln/skills/crm/: SKILL.md  __init__.py  cli.py  queries.py  skill.toml  workflow.py
openkiln/skills/emailguard/: SKILL.md  __init__.py  api.py  cli.py  queries.py  skill.toml
openkiln/skills/orbisearch/: SKILL.md  __init__.py  api.py  cli.py  queries.py  skill.toml  workflow.py
openkiln/skills/smartlead/: SKILL.md  __init__.py  api.py  cli.py  queries.py  skill.toml  workflow.py
tests/: __init__.py  conftest.py  test_commands.py  test_config.py  test_crm_skill.py  test_db.py  test_emailguard_skill.py  test_orbisearch_skill.py  test_record_commands.py  test_skill_commands.py  test_smartlead_skill.py  test_workflow.py
tests/fixtures/: sample.csv
workflows/examples/: validate-and-push.yml
(+7 files in other folders)
