[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openkiln"
version = "0.1.0"
description = "Open source agentic data workflow CLI. Built by OrbiSearch."
readme = "README.md"
license = { text = "Elastic-2.0" }
authors = [
  { name = "OrbiSearch", email = "alex@orbisearch.com" }
]
requires-python = ">=3.11"
keywords = ["cli", "data", "workflows", "enrichment", "gtm", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "typer>=0.12",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "rich>=13.0",
  "pyyaml>=6.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://openkiln.dev"
Repository = "https://github.com/OrbiSearch/openkiln"
"Bug Tracker" = "https://github.com/OrbiSearch/openkiln/issues"

[project.scripts]
openkiln = "openkiln.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.4",
]

[tool.hatch.version]
path = "openkiln/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 105

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=openkiln --cov-report=term-missing"
